0.7.5: difficulty levels are now equal among chosen questions number of selected questions is now correct controls setup is now executed after questions are loaded mistake fixed in instruction (number of questions per difficulty level) progress boxes hide now when resolution gets too low

--- a/styles/scss/components/_controls.scss
+++ b/styles/scss/components/_controls.scss
@@ -48,4 +48,8 @@
     position: absolute;
     z-index: 1;
   }
+
+  .controls__progress-box {
+    display: none;
+  }
 }
